# SimpleVectors

./: .gitignore  CClock.cpp  CClock.h  CMakeLists.txt  FourierTransform.bmarks  FourierTransform.cbp  FourierTransform.depend  FourierTransform.layout  LICENSE  build_win_msys2.sh  configure_win_msys2.sh  fft.bmarks  fft.cbp  fft.depend  fft.error  fft.layout  fft.math  fft.sd  main.cpp  rc.h  rc.rc  res.h  vmath.hpp
.github/workflows/: c-cpp.yml
data/: config.cfg  config.toml  display.toml  en_us.txt  help_en_us.txt  help_zh_cn.txt  log.txt  out.txt  zh_cn.txt
data/translations/: en_us.toml
includes/: MultiEnString.h  Translator.h  aaa_util.h  spdlog.h
old/: fft.bmarks  fft.cbp  fft.depend  fft.layout  fft.math  fft.sd  main.cpp  rc.rc  res.h  vmath.hpp
old/data/: config.cfg  help_en_us.html  log.txt  zh_cn.txt
src/: main.cpp  vmath.hpp
